[package]
name = "examples-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-ws = { git = "https://github.com/moofone/shared-ws" }
shared-rate_limiter = { git = "https://github.com/moofone/shared-rate_limiter" }
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Pin to the same rev as `shared-ws` to avoid duplicate kameo sources in Cargo.lock
# (which breaks trait coherence when types cross the crate boundary).
kameo = { git = "https://github.com/moofone/kameo", rev = "ee74f3e4e21efe4f456e6eeb1f7e68cb24322186", features = ["remote"] }
lexical-core = "0.8"
memchr = "2"
serde = { version = "1", features = ["derive"] }
sonic-rs = { version = "0.5.6", features = ["arbitrary_precision"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }
