[package]
name = "examples-ws"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moofone/examples-ws"
readme = "README.md"
description = "Exchange-specific examples and adapters built on top of shared-ws (Bybit, Deribit)."

[dependencies]
shared-ws = { git = "https://github.com/moofone/shared-ws", version = "=0.1.2", rev = "587a44c3e0b7e4a1ae67201b232fa4ceeaa6a960" }
shared-rate_limiter = { git = "https://github.com/moofone/shared-rate_limiter", version = "=0.1.0", rev = "a58a8a3f93d788c0ecb34ff68b723dd85bc542b2" }
bytes = "1.6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Keep the `kameo` source consistent with `shared-ws` to avoid duplicate `kameo` crates in
# `Cargo.lock` (trait coherence breaks when types cross the crate boundary).
kameo = { git = "https://github.com/moofone/kameo.git", branch = "main", version = "=0.19.2", features = ["remote"] }
lexical-core = "0.8"
memchr = "2"
serde = { version = "1", features = ["derive"] }
sonic-rs = { version = "0.5.6", features = ["arbitrary_precision"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "connect"] }
